# simd-bench

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  implementation.md
benchmarks/: kernel_bench.cc  timing_bench.cc
docs/: INSIGHTS_VALIDATION_REPORT.md
examples/: dot_product.cc  full_benchmark.cc  insights_demo.cc  insights_validation_loop.cc  insights_validator.cc  matmul.cc
include/simd_bench/: autovec.h  backend_registry.h  branch_analysis.h  config.h  correctness.h  energy.h  hardware.h  insights.h  kernel_registry.h  loop_tiling.h  memory_traffic.h  metrics_analyzer.h  performance_counters.h  prefetch.h  register_pressure.h  regression.h  report_generator.h  roofline.h  runner.h  scaling.h  simd_bench.h  timing.h  tma.h  types.h
src/: autovec.cc  backend_registry.cc  branch_analysis.cc  config.cc  correctness.cc  energy.cc  hardware.cc  insights.cc  kernel_registry.cc  loop_tiling.cc  main.cc  memory_traffic.cc  metrics_analyzer.cc  performance_counters.cc  prefetch.cc  register_pressure.cc  regression.cc  report_generator.cc  roofline.cc  runner.cc  scaling.cc  timing.cc  tma.cc
tests/: correctness_test.cc  energy_test.cc  hardware_test.cc  integration_test.cc  kernel_registry_test.cc  metrics_analyzer_test.cc  performance_counters_test.cc  report_generator_test.cc  roofline_test.cc  runner_test.cc  timing_test.cc  tma_test.cc
